// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel Component renders without crashing 1`] = `
<div
  className="Channel"
>
  <h2>
    Test-Stream
  </h2>
  <div>
    ChannelItemContainer
  </div>
  <div>
    ChannelItemContainer
  </div>
  <div>
    ChannelItemContainer
  </div>
</div>
`;

exports[`Channel Component shows an error, when error state in store is active 1`] = `
<div
  className="alert alert-danger"
>
  error while loading channel
</div>
`;

exports[`Channel Component shows loading animation, when loading state in store is active 1`] = `
<div
  className="alert alert-info"
>
  Loading channel...
</div>
`;
